# Alcominance

./: .travis.yml  CMakeLists.txt  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  becher.conf  configure  configure.in  download.html  files.txt  iepngfix.htc  index.html  makefile  makefile.in  makeplugin  snimky-ze-hry.html  styles.css  thickbox.css
512/: intro.hx
Win32/: BecherEditor.vcproj  BecherGame.nsi  BecherGame.sln  BecherGame.vcproj
Win32/install/: becher.conf
docs/: BecherGame_gamelogic_stockflow.odg  BecherGame_script_manual.ods  Bgame.doc  ChangeLog.txt  Intro.doc  Makefile.DocBook  Napoveda.doc  Napoveda_en.doc  README.TXT  developer.txt  developer.xml  lua.xml  rules.txt  scriptsandsoon.nfo  todo.tdl  todo.xml
editor/: makefile.in
editor/help/: bechereditor.hhc  bechereditor.hhk  bechereditor.hhp  bechereditor.html  control.htm  files.html  lang.htm  lf_addfile.htm  lf_loadlang.htm  lf_loadresource.htm  script.htm
gfx/GUI/: GUI.fla  GUI2.psd
gfx/gfx-src/: dialog_1.psd
gfx/icons/: krizek.dds
gfx/menu/: cara.dds  dialog_1.dds
gfx/screens/: cil_splnen.dds  cil_splnen_eng.dds  ukoncit.dds  ukoncit_eng.dds
gfx/teren/: ter_hlina.dds  ter_trava1.dds  ter_trava2.dds  teren.psd  teren2.dds  teren4.dds  voda.dds
maps/: 1.bm  2.bm  3.bm  4.bm  poslednimodel.bm  testai.bm
models/3DS Files/: BabaJaga.3DS
models/Flash/: Erb.fla
models/MAX Export/: BabaJaga_exp.max  Bedna_exp.max  Bedna_new_exp.max  Chaloupka_exp.max  Cukrovar_exp.max  Destilator_exp.max  Doplnky ke stavenisti_exp.max  Drevorubec_exp.max  Dul_exp.max  Dul_new_exp.max  Farma_exp.max  Kamenny blok_exp.max  Kmen_exp.max  Kolo pocasi_exp.max  Lihovar_exp.max  Misa na byliny_exp.max  Most - rovny_exp.max  Most_new.max  Obchod_exp.max  Olaf_exp.max  Pole_exp.max  Pomnik_0cast.max  Pomnik_1cast.max  Pomnik_2cast.max  Pomnik_3cast.max  Pomnik_exp.max  Sklad_exp.max  Staveniste_exp.max  Strom1_exp.max  Strom2_exp.max  Strom3_exp.max  Strom4_exp.max  Stromy_exp.max  Studna_exp.max  Sud_exp.max  Tovarna_exp.max  Tupoun_chuze_exp.max  Tupoun_exp.max  Tupoun_noseni_bedna_exp.max  Tupoun_noseni_kmen_exp.max  (+11 more)
models/MAX Files/: BabaJaga.max  BabaJaga_biped.max  Bedna.max  Bedna_new.max  Chaloupka babky korenarky.max  Cukrovar.max  Destilator.max  Doplnky ke stavenisti.max  Drevorubec.max  Dul.max  Dul_new.max  Farma.max  Kamenny blok.max  Kmen.max  Kolo pocasi.max  Lihovar.max  Misa na byliny.max  Most - rovny.max  Most - vypouleny.max  Most_new.max  Obchod.max  Olaf.max  Pomnik.max  Sklad.max  Staveniste.max  Strom1.max  Strom2.max  Strom3.max  Strom4.max  Stromy.max  Studna.max  Sud.max  Sud_new.max  Tovarna.max  Tupoun.max  Ukazatel.max  Utes.max  Utes1.max  Utes2.max  Vedro.max  (+4 more)
models/PSD Files/: BabaJaga.psd  Bedna_Becher.psd  Bedna_Becher_lepsi.psd  Bedna_Cukr.psd  Bedna_Dul.psd  Budr.psd  Chaloupka babky korenarky.psd  Chaloupka_komin.psd  Cukrovar.psd  Cukrovar_komin.psd  Destilator.psd  Doplnky ke stavenisti.psd  Drevorubec.psd  Dul_new.psd  Farma.psd  Farma_pole.psd  Kanmenny blok.psd  Kmen.psd  Kolo pocasi.psd  Lihovar.psd  Misa na byliny.psd  Most_new.psd  Mraveniste.psd  Obchod.psd  Pomnik - podklad.psd  Pomnik.psd  Sklad.psd  Staveniste.psd  Strom.psd  Studna.psd  Tovarna.psd  Tupoun.psd  Ukazatel.psd  Utes.psd  Vedro.psd  parezy.psd  sekera.psd
models/TXT Files/: BabaJaga.TXT  Bedna.TXT  Chaloupka.TXT  Cukrovar.TXT  Dul.TXT  Farma.TXT  Lihovar.TXT  Most - rovny.TXT  Obchod.TXT  Sklad.TXT  Stromy.TXT  Studna.TXT  Sud.TXT  Tovarna.TXT  Utes.TXT  budr.TXT  budriky.TXT  drevorubec.TXT  most - new.TXT  mraveniste.TXT  parezy.TXT  tupoun_chuze.TXT  tupoun_noseni_bedna.TXT  tupoun_noseni_kmen.TXT
models/UVWs/: BabaJaga.uvw  Bedna.uvw  Bedna_new.uvw  Budr.uvw  Budriky.uvw  Chaloupka_komin.uvw  Cukrovar.uvw  Cukrovar_komin.uvw  Destilator.uvw  Doplnky ke stavenisti.uvw  Drevorubec.uvw  Dul.uvw  Dul_new.uvw  Farma.uvw  Farma_pole.uvw  Kamenny blok.uvw  Kmen.uvw  Kolo pocasi.uvw  Lihovar.uvw  Misa na byliny.uvw  Most - rovny.uvw  Most_new.uvw  Mraveniste.uvw  Obchod.uvw  Pomnik.uvw  Pomnik_0cast.uvw  Pomnik_1cast.uvw  Pomnik_2cast.uvw  Pomnik_3cast.uvw  Sklad.uvw  Staveniste.uvw  Strom1.uvw  Strom2.uvw  Strom3.uvw  Strom4.uvw  Studna_uvw.uvw  Sud.uvw  Tovarna.uvw  Tupoun.uvw  Ukazatel.uvw  (+6 more)
resource/: czech.lng  editor_cs.mo  editor_cs.po  english.lng  logo.xpm
resource/maleikony/: City_Dirt.xpm  bedna.xpm  chaloupka.xpm  city_squaretiles.xpm  cliff1.xpm  concrete.xpm  cukrovar.xpm  drevorubec.xpm  e_budr.xpm  e_budriky.xpm  e_mraveniste.xpm  e_terrdown.xpm  e_terrprevis.xpm  e_terrup.xpm  e_trava1.xpm  farma.xpm  lihovar.xpm  metalplatecliff.xpm  metalplatetiles.xpm  most.xpm  obchod.xpm  sklad.xpm  sound.xpm  stromy.xpm  studna.xpm  ter_hlina.xpm  ter_pisek.xpm  ter_trava-tmava.xpm  (+3 more)
scripts/: alco.lua  alco.menu  build.menu  construct.lua  factory.lua  factory.menu  farm.menu  hud.menu  id.txt  init.lua  intro.lua  intro.menu  level0.lua  load.lua  main.lua  menu.menu  mine.lua  mine.menu  saw.lua  store.lua  store.menu  sugar.lua  sugar.menu  sugar_build.menu  troll.lua  waterhole.menu
src/: CMakeLists.txt  Makefile.am  Makefile.in  StdAfx.h  b_msg.h  bechapp.cpp  bechapp.h  becher.cpp  becher.h  buildings.cpp  buildings.h  config.cpp  console.cpp  console.h  crr.cpp  crr.h  dialogs.cpp  dialogs.h  elements.cpp  elements.h  game.cpp  game.h  game.rc  id.h  idlist.cpp  infos.cpp  infos.h  jobs.cpp  jobs.h  level.cpp  level.h  main.cpp  map.cpp  map.h  map_loader.cpp  map_loader.h  menu.cpp  menu.h  minimap.cpp  minimap.h  (+50 more)
src/dsim/: Makefile.am  Makefile.in  main.cpp
src/editor/: Editor.rc  Makefile.am  Makefile.in  becher_edit.cpp  editor.cpp  editor.h  editor_map.cpp  editor_map.h  editor_tools.cpp  editor_tools.h  help.cpp  help.h  map_properties.cpp  map_properties.h  resource.h
unix/: AUTHORS  Becher.kdevelop  Makefile.am  Makefile.in  configure  configure.in
unix/macros/: hoe.m4
www/: .htaccess  autori.html  download.html  forum.html  index.html  lightbox-pic.css  lightbox-pic.js  lightbox-tex.css  lightbox-tex.js  snimky-ze-hry.html  styles.css  thickbox.js
(+58 files in other folders)
