AC_INIT(configure.in)
AC_CONFIG_AUX_DIR(unix)
AM_INIT_AUTOMAKE(Alcominance, 1.0)

sinclude(unix/macros/lua.m4)
sinclude(unix/macros/hoe.m4)
sinclude(unix/macros/wxwin.m4)

AC_PROG_CXX
AC_PROG_INSTALL
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
CHECK_LUA()
CHECK_HOE()
CPPFLAGS="$CPPFLAGS -g -fexceptions -D_LINUX -ggdb3 $HOE_CFLAGS $LUA_CFLAGS"
CXXFLAGS="$CXXFLAGS"

LDFLAGS="$LDFLAGS -L/usr/X11R6/lib $HOE_LIBS"

AM_PATH_WXCONFIG(2.8.0, wxWin=1)
if test "$wxWin" != 1; then
AC_MSG_ERROR([
      wxWidgets must be installed on your system
      but wx-config script couldn't be found.

      Please check that wx-config is in path, the directory
      where wxWidgets libraries are installed (returned by
               'wx-config --libs' command) is in LD_LIBRARY_PATH or
               equivalent variable and wxWidgets version is 2.3.4 or above.
       ])
fi


AC_OUTPUT(Makefile src/Makefile src/editor/Makefile src/dsim/Makefile)

