
# these are the headers for your project
# noinst_HEADERS = wokno.h

#########################################################################
# APPLICATION SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = ../Alcominance

# the application source, library search path, and link libraries
___Alcominance_SOURCES = \ 
bechapp.cpp \
buildings.cpp \
config.cpp \
console.cpp \
crr.cpp \
dialogs.cpp \
elements.cpp \
game.cpp \
idlist.cpp \
level.cpp \
main.cpp \
map.cpp \
minimap.cpp \
ministry.cpp \
obj_coalmine.cpp \
obj_destilate.cpp \
obj_factory.cpp \
obj_farm.cpp \
obj_herbe.cpp \
obj_saw.cpp \
obj_shop.cpp \
obj_stonemine.cpp \
obj_store.cpp \
obj_sugar.cpp \
obj_waterhole.cpp \
object.cpp \
panels.cpp \
path_engine.cpp \
phys_prov.cpp \
screens.cpp \
sysobjs.cpp \
terrain.cpp \
troll.cpp \
utils.cpp \
workspace.cpp

___Alcominance_LDADD = -ll $(HOE_LIB) $(LUA_LIBS) -ldl -lbassmod -lX11 -lfl

