# these are the headers for your project
# noinst_HEADERS = wokno.h

#########################################################################
# APPLICATION SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
bin_PROGRAMS = ../Alcominance

# the application source, library search path, and link libraries
___Alcominance_SOURCES = \ 
../src/bechapp.cpp \
../src/buildings.cpp \
../src/config.cpp \
../src/console.cpp \
../src/crr.cpp \
../src/dialogs.cpp \
../src/elements.cpp \
../src/game.cpp \
../src/idlist.cpp \
../src/jobs.cpp \
../src/level.cpp \
../src/main.cpp \
../src/map.cpp \
../src/minimap.cpp \
../src/ministry.cpp \
../src/obj_coalmine.cpp \
../src/obj_construct.cpp \
../src/obj_destilate.cpp \
../src/obj_factory.cpp \
../src/obj_farm.cpp \
../src/obj_herbe.cpp \
../src/obj_saw.cpp \
../src/obj_shop.cpp \
../src/obj_stonemine.cpp \
../src/obj_store.cpp \
../src/obj_sugar.cpp \
../src/obj_waterhole.cpp \
../src/object.cpp \
../src/panels.cpp \
../src/path_engine.cpp \
../src/phys_prov.cpp \
../src/screens.cpp \
../src/sysobjs.cpp \
../src/terrain.cpp \
../src/troll.cpp \
../src/utils.cpp \
../src/workspace.cpp

___Alcominance_LDFLAGS = -ll -lHoeGame -lHoeCore $(LUA_LIBS) -ldl -lbassmod -lX11 -lfl
#$(WX_LIBS) 

